# docs/swagger.json
@@ -1394,7 +1394,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "user_id",
+                        "name": "ID",
                         "in": "path",
                         "required": true
                     },
@@ -2068,12 +2068,6 @@
                 "user_country": {
                     "type": "string"
                 },
-                "user_id": {
-                    "type": "integer"
-                },
-                "user_phone": {
-                    "type": "integer"
-                },
                 "user_pincode": {
                     "type": "integer"
                 },
@@ -2096,12 +2090,6 @@
                 },
                 "user_country": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                },
-                "user_phone": {
-                    "type": "integer"
                 },
                 "user_pincode": {
                     "type": "integer"
